messaging_app/kubeservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: messaging-app-service
spec:
  type: LoadBalancer
  selector:
    app: messaging-app
    version: blue
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8000
